# rss-feed-gen

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
rss_feed_gen/: __init__.py  core.py
tests/: test_rss_feed_gen.py
